--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -3,63 +3,293 @@
 {% block title %}Stock List{% endblock %}
 
 {% block content %}
-<h1>Stock List</h1>
-<a href="{% url 'stock_create' %}" class="btn">Create New Stock</a>
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for stock in stocks %}
-        <tr>
-            <td>{{ stock.name }}</td>
-            <td>{{ stock.quantity }}</td>
-            <td>
-                <a href="{% url 'stock_detail' stock.id %}" class="btn">View</a>
-                <a href="{% url 'stock_update' stock.id %}" class="btn">Edit</a>
-                <a href="{% url 'stock_delete' stock.id %}" class="btn" onclick="return confirm('Are you sure you want to delete this stock?');">Delete</a>
-            </td>
-        </tr>
-        {% empty %}
-        <tr>
-            <td colspan="3">No stocks available.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="col-md-12">
+    <div class="card">
+        <div class="card-header">
+            <div class="d-flex align-items-center">
+                <h4 class="card-title">Stock List</h4>
+                <button
+                    class="btn btn-primary btn-round ms-auto"
+                    data-bs-toggle="modal"
+                    data-bs-target="#addRowModal"
+                >
+                    <i class="fa fa-plus"></i>
+                    Add New Stock
+                </button>
+            </div>
+            <!-- Search Box -->
+            <div class="mt-3">
+                <form method="GET" action="{% url 'stock_list' %}">
+                    <input type="text" id="searchStock" name="search" class="form-control" placeholder="Search Stocks..." value="{{ search_term }}" />
+                </form>
+            </div>
+        </div>
+        <div class="card-body">
+            <!-- Add Stock Modal -->
+            <div class="modal fade" id="addRowModal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header border-0">
+                            <h5 class="modal-title">Add New Stock</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form method="POST" id="addStockForm" action="{% url 'stock_create' %}">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group form-group-default">
+                                            <label>Name</label>
+                                            <input id="addName" type="text" name="name" class="form-control" placeholder="Enter name" required />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 pe-0">
+                                        <div class="form-group form-group-default">
+                                            <label>Quantity</label>
+                                            <input id="addQuantity" type="number" name="quantity" class="form-control" placeholder="Enter quantity" required />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group form-group-default">
+                                            <label>Price</label>
+                                            <input id="addPrice" type="number" name="price" class="form-control" placeholder="Enter price" required />
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer border-0">
+                            <button type="submit" id="addRowButton" class="btn btn-primary" form="addStockForm">Add</button>
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="table-responsive">
+                <table class="display table table-striped table-hover" id="stockTable">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th style="width: 10%">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for stock in stocks %}
+                        <tr>
+                            <td>{{ stock.name }}</td>
+                            <td>{{ stock.quantity }}</td>
+                            <td>{{ stock.price }}</td>
+                            <td>
+                                <div class="form-button-action">
+                                    <button
+                                        type="button"
+                                        class="btn btn-link btn-primary btn-lg"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#viewStockModal{{ stock.id }}"
+                                        title="View Stock"
+                                    >
+                                        <i class="fa fa-eye"></i>
+                                    </button>
+                                    <button
+                                        type="button"
+                                        class="btn btn-link btn-primary btn-lg"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#editStockModal{{ stock.id }}"
+                                        title="Edit Stock"
+                                    >
+                                        <i class="fa fa-edit"></i>
+                                    </button>
+                                    <button
+                                        type="button"
+                                        class="btn btn-link btn-danger"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#deleteStockModal{{ stock.id }}"
+                                        title="Delete Stock"
+                                    >
+                                        <i class="fa fa-times"></i>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+
+                        <!-- View Stock Modal -->
+                        <div class="modal fade" id="viewStockModal{{ stock.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header border-0">
+                                        <h5 class="modal-title">View Stock</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p><strong>Name:</strong> {{ stock.name }}</p>
+                                        <p><strong>Quantity:</strong> {{ stock.quantity }}</p>
+                                        <p><strong>Price:</strong> {{ stock.price }}</p>
+                                    </div>
+                                    <div class="modal-footer border-0">
+                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Edit Stock Modal -->
+                        <div class="modal fade" id="editStockModal{{ stock.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header border-0">
+                                        <h5 class="modal-title">Edit Stock</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <!-- Form to Update Stock -->
+                                        <form method="POST" id="editStockForm{{ stock.id }}" action="{% url 'stock_update' stock.id %}">
+                                            {% csrf_token %}
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <div class="form-group form-group-default">
+                                                        <label>Name</label>
+                                                        <input id="editName{{ stock.id }}" type="text" name="name" class="form-control" value="{{ stock.name }}" required />
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 pe-0">
+                                                    <div class="form-group form-group-default">
+                                                        <label>Quantity</label>
+                                                        <input id="editQuantity{{ stock.id }}" type="number" name="quantity" class="form-control" value="{{ stock.quantity }}" required />
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-group form-group-default">
+                                                        <label>Price</label>
+                                                        <input id="editPrice{{ stock.id }}" type="number" name="price" class="form-control" value="{{ stock.price }}" required />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer border-0">
+                                        <button type="submit" class="btn btn-primary" form="editStockForm{{ stock.id }}">Save changes</button>
+                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Delete Stock Modal -->
+                        <div class="modal fade" id="deleteStockModal{{ stock.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header border-0">
+                                        <h5 class="modal-title">Delete Stock</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete <strong>{{ stock.name }}</strong>?</p>
+                                    </div>
+                                    <div class="modal-footer border-0">
+                                        <!-- Form to Delete Stock -->
+                                        <form method="POST" action="{% url 'stock_delete' stock.id %}">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                        </form>
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- Pagination Controls -->
+            <div class="mt-3">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        {% if stocks.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page=1" aria-label="First">First</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ stocks.previous_page_number }}" aria-label="Previous">Previous</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <span class="page-link" aria-label="First">First</span>
+                            </li>
+                            <li class="page-item disabled">
+                                <span class="page-link" aria-label="Previous">Previous</span>
+                            </li>
+                        {% endif %}
+
+                        {% for num in stocks.paginator.page_range %}
+                            {% if stocks.number == num %}
+                                <li class="page-item active">
+                                    <span class="page-link">{{ num }}</span>
+                                </li>
+                            {% else %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if stocks.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ stocks.next_page_number }}" aria-label="Next">Next</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ stocks.paginator.num_pages }}" aria-label="Last">Last</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <span class="page-link" aria-label="Next">Next</span>
+                            </li>
+                            <li class="page-item disabled">
+                                <span class="page-link" aria-label="Last">Last</span>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block styles %}
 <style>
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
-    th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
-        text-align: left;
-    }
-    th {
-        background-color: #f2f2f2;
-    }
-    tr:hover {
-        background-color: #f1f1f1;
-    }
-    .btn {
-        text-decoration: none;
-        padding: 8px 12px;
-        color: white;
+    .modal-header {
         background-color: #007bff;
-        border-radius: 4px;
+        color: white;
     }
-    .btn:hover {
-        background-color: #0056b3;
+    .modal-body {
+        padding: 20px;
+    }
+    .modal-footer {
+        display: flex;
+        justify-content: flex-end;
     }
 </style>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    // Add search functionality
+    document.getElementById('searchStock').addEventListener('keyup', function() {
+        var input = this.value.toLowerCase();
+        var rows = document.querySelectorAll('#stockTable tbody tr');
+        
+        rows.forEach(function(row) {
+            var cells = row.querySelectorAll('td');
+            var found = Array.from(cells).some(function(cell) {
+                return cell.textContent.toLowerCase().includes(input);
+            });
+            row.style.display = found ? '' : 'none';
+        });
+    });
+</script>
 {% endblock %}
