--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -3,6 +3,12 @@
 {% block title %}Stock List{% endblock %}
 
 {% block content %}
+<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row pt-2 pb-4">
+    <div>
+      <h3 class="fw-bold mb-3">Dashboard</h3>
+      <h6 class="op-7 mb-2">stock/stock_list</h6>
+    </div>
+  </div>
 <div class="col-md-12">
     <div class="card">
         <div class="card-header">
@@ -81,7 +87,7 @@
                         <tr>
                             <td>{{ stock.name }}</td>
                             <td>{{ stock.quantity }}</td>
-                            <td>{{ stock.price }}</td>
+                            <td>${{ stock.price }}</td>
                             <td>
                                 <div class="form-button-action">
                                     <button
