--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
               <span class="sidebar-mini-icon">
                 <i class="fa fa-ellipsis-h"></i>
               </span>
-              <h4 class="text-section">Components</h4>
+              
             </li>
             <li class="nav-item">
               <a href="#base"> <i class="far fa-chart-bar"></i> <p>Customer</p> </a>
@@ -324,7 +324,7 @@
                           <h4>Hizrian</h4>
                           <p class="text-muted">{{ user.username }}!</p>
                           <a
-                            href="{{ user.profile}}"
+                            href="{% url 'profile' %}"
                             class="btn btn-xs btn-secondary btn-sm"
                             >View Profile</a
                           >
