--- a/templates/stock/stock_detail.html
+++ b/templates/stock/stock_detail.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>{{ stock.name }}</h2>
-<p>Quantity: {{ stock.quantity }}</p>
-<p>Price: ${{ stock.price }}</p>
-<a href="{% url 'stock_update' stock.pk %}">Edit</a>
-<a href="{% url 'stock_delete' stock.pk %}">Delete</a>
-<a href="{% url 'stock_list' %}">Back to list</a>
+<div class="card card-round">
+    <div class="card-body">
+        <div class="card-title fw-mediumbold">{{ stock.name }}</div>
+        <div class="info-user">
+            <p>Quantity: {{ stock.quantity }}</p>
+            <p>Price: ${{ stock.price }}</p>
+        </div>
+        <div class="button-group">
+            <a href="{% url 'stock_list' %}" class="btn btn-primary">
+                <i class="fa fa-arrow-left"></i> Back to list
+            </a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
