--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,8 +1,31 @@
+
 {% extends "base.html" %}
+
+{% block content %}
+<div class="card card-round">
+    <div class="card-body">
+        <div class="card-title fw-mediumbold">{{ stock.name }}</div>
+        <div class="info-user">
+            <h2>Profile</h2>
+            <p>Welcome, {{ user.username }}!</p>
+            <p>email, {{ user.email }}!</p>
+            <a href="{% url 'password_reset' %}">Change Password</a><br><br>
+            <a href="{% url 'logout' %}">Logout</a>
+        </div><br>
+        <div class="button-group">
+            <a href="{% url 'stock_list' %}" class="btn btn-primary">
+                <i class="fa fa-arrow-left"></i> Back to list
+            </a>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+{% comment %} {% extends "base.html" %}
 {% block content %}
     <h2>Profile</h2>
     <p>Welcome, {{ user.username }}!</p>
     <p>email, {{ user.email }}!</p>
     <a href="{% url 'password_reset' %}">Change Password</a>
     <a href="{% url 'logout' %}">Logout</a>
-{% endblock %}
+{% endblock %} {% endcomment %}
