--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,7 +37,7 @@
               
             </li>
             <li class="nav-item">
-              <a href="#base"> <i class="far fa-chart-bar"></i> <p>Customer</p> </a>
+              <a href="{% url 'customer_list' %}"> <i class="far fa-chart-bar"></i> <p>Customer</p> </a>
             </li>
             <li class="nav-item">
               <a href="#base"> <i class="fas fa-clipboard-list"></i><p>Invetory</p> </a> 
@@ -46,7 +46,7 @@
               <a href="{% url 'stock_list' %}"> <i class="fas fa-warehouse"></i> <p>Stock</p> </a> 
             </li>
             <li class="nav-item">
-              <a href="#base"> <i class="fas fa-truck"></i> <p>Supplier</p> </a> 
+              <a href="{% url 'supplier_list' %}"> <i class="fas fa-truck"></i> <p>Supplier</p> </a> 
             </li>
           </ul>
         </div>
