--- a/templates/customer/customer_list.html
+++ b/templates/customer/customer_list.html
@@ -96,7 +96,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for customer in customers %}
+                        {% for customer in customer %}
                         <tr>
                             <td>{{ customer.last_name }}{{ customer.last_name }}</td>
                             <td>{{ customer.email }}</td>
@@ -207,11 +207,11 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Are you sure you want to delete <strong>{{ customers.name }}</strong>?</p>
+                                        <p>Are you sure you want to delete <strong>{{ customer.name }}</strong>?</p>
                                     </div>
                                     <div class="modal-footer border-0">
                                         <!-- Form to Delete Stock -->
-                                        <form method="POST" action="{% url 'customers_delete' customer.id %}">
+                                        <form method="POST" action="{% url 'customer_delete' customer.id %}">
                                             {% csrf_token %}
                                             <button type="submit" class="btn btn-danger">Delete</button>
                                         </form>
@@ -229,12 +229,12 @@
             <div class="mt-3">
                 <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center">
-                        {% if customers.has_previous %}
+                        {% if customer.has_previous %}
                             <li class="page-item">
                                 <a class="page-link" href="?page=1" aria-label="First">First</a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ customers.previous_page_number }}" aria-label="Previous">Previous</a>
+                                <a class="page-link" href="?page={{ customer.previous_page_number }}" aria-label="Previous">Previous</a>
                             </li>
                         {% else %}
                             <li class="page-item disabled">
@@ -245,8 +245,8 @@
                             </li>
                         {% endif %}
 
-                        {% for num in customers.paginator.page_range %}
-                            {% if customers.number == num %}
+                        {% for num in customer.paginator.page_range %}
+                            {% if customer.number == num %}
                                 <li class="page-item active">
                                     <span class="page-link">{{ num }}</span>
                                 </li>
@@ -257,12 +257,12 @@
                             {% endif %}
                         {% endfor %}
 
-                        {% if customers.has_next %}
+                        {% if customer.has_next %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ customers.next_page_number }}" aria-label="Next">Next</a>
+                                <a class="page-link" href="?page={{ customer.next_page_number }}" aria-label="Next">Next</a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ customers.paginator.num_pages }}" aria-label="Last">Last</a>
+                                <a class="page-link" href="?page={{ customer.paginator.num_pages }}" aria-label="Last">Last</a>
                             </li>
                         {% else %}
                             <li class="page-item disabled">
