--- a/templates/supplier/supplier_list.html
+++ b/templates/supplier/supplier_list.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Supplier List{% endblock %}
+{% block title %}Supplier{% endblock %}
 
 {% block content %}
 <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row pt-2 pb-4">
     <div>
       <h3 class="fw-bold mb-3">Dashboard</h3>
-      <h6 class="op-7 mb-2">stock/stock_list</h6>
+      <h6 class="op-7 mb-2">Supplier/Supplier_list</h6>
     </div>
   </div>
   {% if messages %}
@@ -21,7 +21,7 @@
     <div class="card">
         <div class="card-header">
             <div class="d-flex align-items-center">
-                <h4 class="card-title">Stock List</h4>
+                <h4 class="card-title">Supplier List</h4>
                 <button
                     class="btn btn-primary btn-round ms-auto"
                     data-bs-toggle="modal"
