--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,11 @@
     <link rel="icon" href="{% static "#" %}" type="image/x-icon"/>
 
   <!-- CSS Files -->
-  <link rel="stylesheet" href="{% static "assets/css/bootstrap.min.css" %}" />
-  <link rel="stylesheet" href="{% static "assets/css/plugins.min.css" %}" />
+  {% comment %} <link rel="stylesheet" href="{% static "assets/css/bootstrap.min.css" %}" />
+  <link rel="stylesheet" href="{% static "assets/css/plugins.min.css" %}" /> {% endcomment %}
   <link rel="stylesheet" href="{% static "assets/css/stock.min.css" %}" />
+
+  
 
 </head>
 <body>
