--- a/templates/customer/customer_list.html
+++ b/templates/customer/customer_list.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Supplier List{% endblock %}
+{% block title %}Customer{% endblock %}
 
 {% block content %}
 <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row pt-2 pb-4">
     <div>
       <h3 class="fw-bold mb-3">Dashboard</h3>
-      <h6 class="op-7 mb-2">stock/stock_list</h6>
+      <h6 class="op-7 mb-2">customer/customer_list</h6>
     </div>
   </div>
   {% if messages %}
@@ -21,19 +21,19 @@
     <div class="card">
         <div class="card-header">
             <div class="d-flex align-items-center">
-                <h4 class="card-title">Stock List</h4>
+                <h4 class="card-title">Customer List</h4>
                 <button
                     class="btn btn-primary btn-round ms-auto"
                     data-bs-toggle="modal"
                     data-bs-target="#addRowModal"
                 >
                     <i class="fa fa-plus"></i>
-                    Add New Stock
+                    Add New Customer
                 </button>
             </div>
             <!-- Search Box -->
             <div class="mt-3">
-                {% comment %} <form method="GET" action="{% url 'stock_list' %}">
+                {% comment %} <form method="GET" action="{% url 'customer_list' %}">
                     <input type="text" id="searchStock" name="search" class="form-control" placeholder="Search Stocks..." value="{{ search_term }}" />
                 </form> {% endcomment %}
             </div>
@@ -45,9 +45,9 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Contact Name</th>
-                            <th>Phone Number</th>
                             <th>Email</th>
+                            <th>Phone Number</th>
+                            <th>Address</th>
                             <th style="width: 10%">Actions</th>
                         </tr>
                     </thead>
@@ -64,7 +64,7 @@
                                         type="button"
                                         class="btn btn-link btn-primary btn-lg"
                                         data-bs-toggle="modal"
-                                        data-bs-target="#viewsupplierModal{{ customer.id }}"
+                                        data-bs-target="#ViewCustomers{{ customer.id }}"
                                         title="View Customer"
                                     >
                                         <i class="fa fa-eye"></i>
@@ -73,7 +73,7 @@
                                         type="button"
                                         class="btn btn-link btn-primary btn-lg"
                                         data-bs-toggle="modal"
-                                        data-bs-target="#editsupplierModal{{ customer.id }}"
+                                        data-bs-target="#UpdateCustomers{{ customer.id }}"
                                         title="Edit Customer"
                                     >
                                         <i class="fa fa-edit"></i>
@@ -82,7 +82,7 @@
                                         type="button"
                                         class="btn btn-link btn-danger"
                                         data-bs-toggle="modal"
-                                        data-bs-target="#deletesupplierModal{{ customer.id }}"
+                                        data-bs-target="#DeleteCustomer{{ customer.id }}"
                                         title="Delete Customer"
                                     >
                                         <i class="fa fa-times"></i>
@@ -90,16 +90,16 @@
                                 </div>
                             </td>
                         </tr>
-                        <!-- Add Stock Modal -->
+                        <!-- Add Customer Modal -->
                         <div class="modal fade" id="addRowModal" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header border-0">
-                                        <h5 class="modal-title">Add New Stock</h5>
+                                        <h5 class="modal-title">Add New Customer</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form method="POST" id="addsupplierForm" action="{% url 'customer_create' %}">
+                                        <form method="POST" id="CustomerForm" action="{% url 'customer_create' %}">
                                             {% csrf_token %}
                                             <div class="row">
                                                 <div class="col-sm-12">
@@ -131,18 +131,18 @@
                                         </form>
                                     </div>
                                     <div class="modal-footer border-0">
-                                        <button type="submit" id="addRowButton" class="btn btn-primary" form="addsupplierForm">Add</button>
+                                        <button type="submit" id="addRowButton" class="btn btn-primary" form="CustomerForm">Add</button>
                                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <!-- View Stock Modal -->
-                        <div class="modal fade" id="viewsupplierModal{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal fade" id="ViewCustomers{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header border-0">
-                                        <h5 class="modal-title">View Stock</h5>
+                                        <h5 class="modal-title">View Customer</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -159,47 +159,47 @@
                         </div>
 
                         <!-- Edit Stock Modal -->
-                        <div class="modal fade" id="editsupplierModal{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal fade" id="UpdateCustomers{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header border-0">
-                                        <h5 class="modal-title">Edit Stock</h5>
+                                        <h5 class="modal-title">Update Customer</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
                                         <!-- Form to Update Stock -->
-                                        <form method="POST" id="editsupplierForm{{ customer.id }}" action="{% url 'customer_update' customer.id %}">
+                                        <form method="POST" id="UpdateCustomerForm{{ customer.id }}" action="{% url 'customer_update' customer.id %}">
                                             {% csrf_token %}
                                             <div class="row">
                                                 <div class="col-sm-12">
                                                     <div class="form-group form-group-default">
                                                         <label>First Name</label>
-                                                        <input id="editName{{ customer.id }}" type="text" name="name" class="form-control" value="{{ stock.name }}" required />
+                                                        <input id="editName{{ customer.id }}" type="text" name="name" class="form-control" value="{{ customer.first_name }}" required />
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-12">
                                                     <div class="form-group form-group-default">
                                                         <label>Email</label>
-                                                        <input id="editEmail{{ customer.id }}" type="text" name="email" class="form-control" placeholder="Enter Email" required />
+                                                        <input id="editEmail{{ customer.id }}" type="text" name="email" value="{{ customer.email }}" class="form-control" required />
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-12">
                                                     <div class="form-group form-group-default">
                                                         <label>Phone Number</label>
-                                                        <input id="editPhone{{ customer.id }}" type="text" name="phone_number" class="form-control" placeholder="Enter name" required />
+                                                        <input id="editPhone{{ customer.id }}" type="text" name="phone_number" value="{{ customer.phone_number }}" class="form-control" required />
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-12">
                                                     <div class="form-group form-group-default">
                                                         <label>Address</label>
-                                                        <input id="editAddress{{ customer.id }}" type="text" name="address" class="form-control" placeholder="Enter name" required />
+                                                        <input id="editAddress{{ customer.id }}" type="text" name="address" value="{{ customer.address }}" class="form-control" required />
                                                     </div>
                                                 </div>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="modal-footer border-0">
-                                        <button type="submit" class="btn btn-primary" form="editsupplierForm{{ supplier.id }}">Save changes</button>
+                                        <button type="submit" class="btn btn-primary" form="UppdateCustomerForm{{ customer.id }}">Save changes</button>
                                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
@@ -207,11 +207,11 @@
                         </div>
 
                         <!-- Delete Stock Modal -->
-                        <div class="modal fade" id="deletesupplierModal{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal fade" id="DeleteCustomer{{ customer.id }}" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header border-0">
-                                        <h5 class="modal-title">Delete Stock</h5>
+                                        <h5 class="modal-title">Delete Customer</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -320,34 +320,9 @@
             row.style.display = found ? '' : 'none';
         });
     });
+    $('#create').on('hidden.bs.modal', function () {
+        $('#CustomerForm')[0].reset();
+    });
+    
 </script>
 {% endblock %}
-
-<h2>Supplier List</h2>
-
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Contact</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for supplier in suppliers %}
-        <tr>
-            <td>{{ supplier.name }}</td>
-            <td>{{ supplier.contact_name }}</td>
-            <td>{{ supplier.phone_number }}</td>
-            <td>{{ supplier.email }}</td>
-            <td>
-                <a href="{% url 'supplier_edit' supplier.id %}">Edit</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-
-<a href="{% url 'supplier_create' %}">Add Supplier</a>
