--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="dark">
           <a href="{% url 'home' %}" class="logo">
-            <img src="{% static "#" %}%}" alt="navbar brand" class="navbar-brand" height="20" />
+            <img src="" alt="navbar brand" class="navbar-brand" height="20" />
           </a>
           <div class="nav-toggle">
             <button class="btn btn-toggle toggle-sidebar">
@@ -302,7 +302,7 @@
                   </div>
                 </div>
               </li>
-              {% load static %}
+              
               <li class="nav-item topbar-user dropdown hidden-caret">
                 <a class="dropdown-toggle profile-pic" data-bs-toggle="dropdown" href="#" aria-expanded="false">
                   <div class="avatar-sm">
@@ -318,7 +318,7 @@
                     <li>
                       <div class="user-box">
                         <div class="avatar-lg">
-                          <img src="assets/img/profile.jpg" alt="image profile" class="avatar-img rounded" />
+                          <img src="" alt="image profile" class="avatar-img rounded" />
                         </div>
                         <div class="u-text">
                           <h4>Hizrian</h4>
